--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,7 +1,7 @@
 <section id="services">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-9 text-center">
                 <h2 class="section-heading">At Your Service</h2>
                 <hr class="primary">
             </div>
@@ -20,7 +20,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Ready to Ship</h3>
-                    <p class="text-muted">All our most popular cards are in stcok, readzy to ship as you place your order!</p>
+                    <p class="text-muted">All our most popular cards are in stock, ready to ship as you place your order!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
