--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,7 +10,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Individual
                             </div>
                         </div>
                     </div>
@@ -25,7 +25,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Just Awesome
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Special Moment
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Everyday
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Christmas
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Love
                             </div>
                         </div>
                     </div>
